--- a/composer.json
+++ b/composer.json
@@ -11,7 +11,7 @@
         }
     ],
     "require": {
-        "yiisoft/yii2": "*",
+        "yiisoft/yii2": "~2.0",
         "bower-asset/lightbox2": "~2.8"
     },
     "autoload": {
